--- a/dbdemo/src/main/res/layout/content_main.xml
+++ b/dbdemo/src/main/res/layout/content_main.xml
@@ -23,4 +23,18 @@
         android:text="查询"
         />
 
+    <Button
+        android:id="@+id/bt_update"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="更新"
+        />
+
+    <Button
+        android:id="@+id/bt_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="删除"
+        />
+
 </LinearLayout>
