--- a/morr/src/main/res/layout/content_main.xml
+++ b/morr/src/main/res/layout/content_main.xml
@@ -269,6 +269,12 @@
             android:layout_weight="1"
             android:onClick="RxRetry"
             android:text="retry" />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="RxFlowable"
+            android:text="Flowable" />
     </LinearLayout>
 
 </LinearLayout>
