--- a/simpleeyes/src/main/res/values/styles.xml
+++ b/simpleeyes/src/main/res/values/styles.xml
@@ -23,4 +23,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!--Tab文字样式-->
+    <style name="TabAppearance">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
