--- a/app/src/main/res/layout/activity_camera_activty.xml
+++ b/app/src/main/res/layout/activity_camera_activty.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
@@ -16,6 +18,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="打开相机拍照"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/iv_photo"
         />
 
 </LinearLayout>
