--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -24,4 +24,11 @@
         android:onClick="startHandler"
         />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="闪退"
+        android:onClick="startCrash"
+        />
+
 </LinearLayout>
