--- a/app/src/main/res/layout/activity_handler.xml
+++ b/app/src/main/res/layout/activity_handler.xml
@@ -3,4 +3,25 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="request"
+        android:onClick="startRequest"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="缓存请求"
+        android:onClick="startCache"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="初始化"
+        android:onClick="startInit"
+        />
+
 </LinearLayout>
